--- a/package/libs/glib2/Makefile
+++ b/package/libs/glib2/Makefile
@@ -13,7 +13,7 @@ PKG_RELEASE:=1
 
 PKG_SOURCE:=glib-$(PKG_VERSION).tar.xz
 PKG_BUILD_DIR:=$(COMPILE_DIR)/glib-$(PKG_VERSION)
-PKG_SOURCE_URL:=http://ftp.gnome.org/pub/gnome/sources/glib/$(PKG_VERSION)
+PKG_SOURCE_URL:=@GNOME/glib/$(word 1,$(subst ., ,$(PKG_VERSION))).$(word 2,$(subst ., ,$(PKG_VERSION)))
 PKG_HASH:=
 
 PKG_BUILD_PARALLEL:=1
